--- a/RevStack.OrientDb.csproj
+++ b/RevStack.OrientDb.csproj
@@ -37,7 +37,7 @@
     </Reference>
     <Reference Include="RevStack.Pattern, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\RevStack.Pattern.dll</HintPath>
+      <HintPath>..\RevStack.Pattern\RevStack.Pattern\bin\Release\RevStack.Pattern.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
