--- a/RevStack.OrientDb.csproj
+++ b/RevStack.OrientDb.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RevStack.Pattern">
@@ -56,6 +56,7 @@
     <Compile Include="Client\OrientDbCommand.cs" />
     <Compile Include="Client\RestException.cs" />
     <Compile Include="Client\RestResponse.cs" />
+    <Compile Include="EntityBase.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Client\OrientDbConnection.cs">
       <SubType>Component</SubType>
