--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "RevStack.OrientDb",
   "version": "0.9.3",
   "description": "OrientDb implementation of the RevStack c# repository pattern",
-  "main": "index.js",
+  "main": "RevStack.OrientDb.sln",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
