--- a/RevStack.OrientDb.nuspec
+++ b/RevStack.OrientDb.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>RevStack.OrientDb</id>
-    <version>1.0.1</version>
+    <version>1.1</version>
     <title>RevStack.OrientDb</title>
     <authors>MIS Interactive</authors>
     <owners>D. Sheets, S. Francis</owners>
@@ -12,6 +12,6 @@
     <description>OrientDb implementation of the RevStack c# repository pattern.</description>
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>RevStack IO Repository</tags>
+    <tags>OrientDb RevStack Repository Pattern</tags>
   </metadata>
 </package>
